# Seminar-IPS4O

./: .gitignore  CMakeLists.txt
src/: first_test.cpp
